docs/refman: fix unit prefix in example

--- a/docs/0.reference-manual.md
+++ b/docs/0.reference-manual.md
@@ -1,6 +1,6 @@
 # LuaRadio Reference Manual
 
-Generated from LuaRadio `v0.0.19`.
+Generated from LuaRadio `v0.0.19-5-gdc79cfa`.
 
 ## Table of contents
 
@@ -138,9 +138,9 @@ Generated from LuaRadio `v0.0.19`.
 ``` lua
 local radio = require('radio')
 
--- RTL-SDR Source, frequency 88.5 MHz - 250 KHz, sample rate 1102500 Hz
+-- RTL-SDR Source, frequency 88.5 MHz - 250 kHz, sample rate 1102500 Hz
 local source = radio.RtlSdrSource(88.5e6 - 250e3, 1102500)
--- Tuner block, translate -250 KHz, filter 200 KHz, decimate by 5
+-- Tuner block, translate -250 kHz, filter 200 kHz, decimate by 5
 local tuner = radio.TunerBlock(-250e3, 200e3, 5)
 -- Wideband FM Stereo Demodulator block
 local demodulator = radio.WBFMStereoDemodulator()
@@ -164,7 +164,7 @@ top:run()
 ```
 
 ```
-$ luaradio test.lua
+$ luaradio example.lua
 ```
 
 ## Running Scripts
@@ -424,7 +424,7 @@ local src = radio.IQFileSource('samples.s8.iq', 's8', 1e6)
 -- Source little-endian 32-bit IQ samples from a file sampled at 1 MHz, repeating on EOF
 local src = radio.IQFileSource('samples.f32le.iq', 'f32le', 1e6, true)
 
--- Source little-endian signed 16-bit IQ samples from stdin sampled at 500 KHz
+-- Source little-endian signed 16-bit IQ samples from stdin sampled at 500 kHz
 local src = radio.IQFileSource(io.stdin, 's16le', 500e3)
 ```
 <div style="margin-bottom:-10px;" align="right"><a href="#table-of-contents">^</a></div>
@@ -451,10 +451,10 @@ Source a zero-valued signal of the specified data type.
 -- Source a zero complex-valued signal sampled at 1 MHz
 local src = radio.NullSource(radio.types.ComplexFloat32, 1e6)
 
--- Source a zero real-valued stream sampled at 500 KHz
+-- Source a zero real-valued stream sampled at 500 kHz
 local src = radio.NullSource(radio.types.Bit, 500e3)
 
--- Source a zero bit stream sampled at 2 KHz
+-- Source a zero bit stream sampled at 2 kHz
 local src = radio.NullSource(radio.types.Bit, 2e3)
 ```
 <div style="margin-bottom:-10px;" align="right"><a href="#table-of-contents">^</a></div>
@@ -486,7 +486,7 @@ serializing data types across a pipe or other file descriptor based IPC.
 -- Source ComplexFloat32 samples sampled at 1 MHz from a file descriptor
 local src = radio.RawFileSource(3, radio.types.ComplexFloat32, 1e6)
 
--- Source Byte samples sampled at 100 KHz from a file, repeating on EOF
+-- Source Byte samples sampled at 100 kHz from a file, repeating on EOF
 local src = radio.RawFileSource('data.bin', radio.types.Byte, 100e3, true)
 ```
 <div style="margin-bottom:-10px;" align="right"><a href="#table-of-contents">^</a></div>
@@ -524,7 +524,7 @@ local src = radio.RealFileSource('samples.s8.real', 's8', 1e6)
 -- Source little-endian 32-bit real samples from a file sampled at 1 MHz, repeating on EOF
 local src = radio.RealFileSource('samples.f32le.real', 'f32le', 1e6, true)
 
--- Source little-endian signed 16-bit real samples from stdin sampled at 500 KHz
+-- Source little-endian signed 16-bit real samples from stdin sampled at 500 kHz
 local src = radio.RealFileSource(0, 's16le', 500e3)
 ```
 <div style="margin-bottom:-10px;" align="right"><a href="#table-of-contents">^</a></div>
@@ -584,7 +584,7 @@ other waveform types generate a real-valued signal.
 * `options` (*table*): Additional options, specifying:
     * `amplitude` (number, default 1.0)
     * `offset` (number, default 0.0)
-    * `phase` (number, default 0.0)
+    * `phase` (number in radians, default 0.0)
 
 
 ###### Type Signatures
@@ -595,13 +595,13 @@ other waveform types generate a real-valued signal.
 ###### Example
 
 ``` lua
--- Source a 250 KHz complex exponential sampled at 2 MHz
+-- Source a 250 kHz complex exponential sampled at 2 MHz
 local src = radio.SignalSource('exponential', 250e3, 2e6)
 
--- Source a 100 KHz cosine sampled at 1 MHz, with amplitude 2.5
+-- Source a 100 kHz cosine sampled at 1 MHz, with amplitude 2.5
 local src = radio.SignalSource('cosine', 100e3, 1e6, {amplitude = 2.5})
 
--- Source a 1 KHz square wave sampled at 2 MHz, with offset 1.0
+-- Source a 1 kHz square wave sampled at 2 MHz, with offset 1.0
 local src = radio.SignalSource('square', 1e3, 2e6, {offset = 1.0})
 ```
 <div style="margin-bottom:-10px;" align="right"><a href="#table-of-contents">^</a></div>
@@ -640,10 +640,10 @@ local src = radio.UniformRandomSource(radio.types.ComplexFloat32, 1e6)
 -- Source a random Float32 signal sampled at 1 MHz
 local src = radio.UniformRandomSource(radio.types.Float32, 1e6)
 
--- Source a random Byte signal sampled at 1 KHz, ranging from 65 to 90
+-- Source a random Byte signal sampled at 1 kHz, ranging from 65 to 90
 local src = radio.UniformRandomSource(radio.types.Byte, 1e3, {65, 90})
 
--- Source a random bit stream sampled at 1 KHz
+-- Source a random bit stream sampled at 1 kHz
 local src = radio.UniformRandomSource(radio.types.Bit, 1e3)
 ```
 <div style="margin-bottom:-10px;" align="right"><a href="#table-of-contents">^</a></div>
@@ -751,7 +751,7 @@ as it does not skip any samples, or it may otherwise throttle a flow graph.
 ###### Example
 
 ``` lua
--- Plot a 1 KHz cosine sampled at 250 KHz
+-- Plot a 1 kHz cosine sampled at 250 kHz
 local snk = radio.SignalSource('cosine', 1e3, 250e3)
 local throttle = radio.ThrottleBlock()
 local snk = radio.GnuplotPlotSink(1000, 'Cosine')
@@ -795,7 +795,7 @@ Bartlett's or Welch's method of averaging periodograms.
 ###### Example
 
 ``` lua
--- Plot the spectrum of a 1 KHz complex exponential sampled at 250 KHz
+-- Plot the spectrum of a 1 kHz complex exponential sampled at 250 kHz
 local snk = radio.SignalSource('exponential', 1e3, 250e3)
 local throttle = radio.ThrottleBlock()
 local snk = radio.GnuplotSpectrumSink()
@@ -844,7 +844,7 @@ with very low sample rates, or it may otherwise throttle a flow graph.
 ###### Example
 
 ``` lua
--- Plot the waterfall of a 1 KHz complex exponential sampled at 250 KHz
+-- Plot the waterfall of a 1 kHz complex exponential sampled at 250 kHz
 local snk = radio.SignalSource('exponential', 1e3, 250e3)
 local throttle = radio.ThrottleBlock()
 local snk = radio.GnuplotSpectrumSink()
@@ -886,7 +886,7 @@ does not skip any samples, or it may otherwise throttle a flow graph.
 ###### Example
 
 ``` lua
--- Plot a 1 KHz complex exponential sampled at 250 KHz
+-- Plot a 1 kHz complex exponential sampled at 250 kHz
 local snk = radio.SignalSource('exponential', 1e3, 250e3)
 local throttle = radio.ThrottleBlock()
 local snk = radio.GnuplotXYPlotSink(1000, 'Complex Exponential', {complex = true})
@@ -929,7 +929,7 @@ component.
 local snk = radio.IQFileSink('samples.s8.iq', 's8')
 
 -- Sink little-endian 32-bit IQ samples to a file
-local snk = radio.IQFileSink('samples.f32le.iq', 'f32le', 1e6, true)
+local snk = radio.IQFileSink('samples.f32le.iq', 'f32le')
 
 -- Sink little-endian signed 16-bit IQ samples to stdout
 local snk = radio.IQFileSink(1, 's16le')
@@ -1185,7 +1185,7 @@ $$ y[n] = (x * h_{bpf})[n] $$
 ###### Example
 
 ``` lua
--- Bandpass filter, 128 taps, 18 KHz to 20 KHz
+-- Bandpass filter, 128 taps, 18 kHz to 20 kHz
 local bpf = radio.BandpassFilterBlock(128, {18e3, 20e3})
 ```
 <div style="margin-bottom:-10px;" align="right"><a href="#table-of-contents">^</a></div>
@@ -1216,7 +1216,7 @@ $$ y[n] = (x * h_{bsf})[n] $$
 ###### Example
 
 ``` lua
--- Bandstop filter, 128 taps, 18 KHz to 20 KHz
+-- Bandstop filter, 128 taps, 18 kHz to 20 kHz
 local bpf = radio.BandstopFilterBlock(128, {18e3, 20e3})
 ```
 <div style="margin-bottom:-10px;" align="right"><a href="#table-of-contents">^</a></div>
@@ -1247,10 +1247,10 @@ $$ y[n] = (x * h_{bpf})[n] $$
 ###### Example
 
 ``` lua
--- Complex bandpass filter, 128 taps, 18 KHz to 20 KHz
+-- Complex bandpass filter, 128 taps, 18 kHz to 20 kHz
 local bpf1 = radio.BandpassFilterBlock(128, {18e3, 20e3})
 
--- Complex bandpass filter, 128 taps, -18 KHz to -20 KHz
+-- Complex bandpass filter, 128 taps, -18 kHz to -20 kHz
 local bpf2 = radio.BandpassFilterBlock(128, {-18e3, -20e3})
 ```
 <div style="margin-bottom:-10px;" align="right"><a href="#table-of-contents">^</a></div>
@@ -1281,10 +1281,10 @@ $$ y[n] = (x * h_{bsf})[n] $$
 ###### Example
 
 ``` lua
--- Complex bandstop filter, 128 taps, 18 KHz to 20 KHz
+-- Complex bandstop filter, 128 taps, 18 kHz to 20 kHz
 local bpf1 = radio.BandstopFilterBlock(128, {18e3, 20e3})
 
--- Complex bandstop filter, 128 taps, -18 KHz to -20 KHz
+-- Complex bandstop filter, 128 taps, -18 kHz to -20 kHz
 local bpf2 = radio.BandstopFilterBlock(128, {-18e3, -20e3})
 ```
 <div style="margin-bottom:-10px;" align="right"><a href="#table-of-contents">^</a></div>
@@ -1407,7 +1407,7 @@ $$ y[n] = (x * h_{hpf})[n] $$
 ###### Example
 
 ``` lua
--- Highpass filter, 128 taps, 18 KHz
+-- Highpass filter, 128 taps, 18 kHz
 local hpf = radio.HighpassFilterBlock(128, 18e3)
 ```
 <div style="margin-bottom:-10px;" align="right"><a href="#table-of-contents">^</a></div>
@@ -1475,7 +1475,7 @@ $$ y[n] = (x * h_{lpf})[n] $$
 ###### Example
 
 ``` lua
--- Lowpass filter, 128 taps, 18 KHz
+-- Lowpass filter, 128 taps, 18 kHz
 local lpf = radio.LowpassFilterBlock(128, 18e3)
 ```
 <div style="margin-bottom:-10px;" align="right"><a href="#table-of-contents">^</a></div>
@@ -1562,7 +1562,7 @@ $$ y[n] = \frac{1}{1 + 2\tau f_s} \; x[n] + \frac{1}{1 + 2\tau f_s} \; x[n-1] - 
 ###### Example
 
 ``` lua
--- Single-pole lowpass filter with 100 KHz cutoff
+-- Single-pole lowpass filter with 100 kHz cutoff
 local lpf = radio.SinglepoleLowpassFilterBlock(100e3)
 ```
 <div style="margin-bottom:-10px;" align="right"><a href="#table-of-contents">^</a></div>
@@ -2001,7 +2001,7 @@ $$ y[n] = x[n] \; e^{j\omega_0 n} $$
 ###### Example
 
 ``` lua
--- Frequency translate -200 KHz
+-- Frequency translate -200 kHz
 local translator = radio.FrequencyTranslatorBlock(-200e3)
 ```
 <div style="margin-bottom:-10px;" align="right"><a href="#table-of-contents">^</a></div>
@@ -2064,7 +2064,7 @@ them.
 ###### Example
 
 ``` lua
--- Translate -100KHz, filter 12KHz, and decimate by 5
+-- Translate -100 kHz, filter 12 kHz, and decimate by 5
 local tuner = radio.TunerBlock(-100e3, 12e3, 5)
 ```
 <div style="margin-bottom:-10px;" align="right"><a href="#table-of-contents">^</a></div>
@@ -2096,10 +2096,10 @@ $$ y[n] = \text{PLL}(x[n], f_{BW}, f_{min}, f_{max}, M) $$
 ###### Example
 
 ``` lua
--- PLL with 1 KHz loop bandwidth, 18 KHz - 21 KHz capture range, 3 multiplier
+-- PLL with 1 kHz loop bandwidth, 18 kHz - 21 kHz capture range, 3 multiplier
 local pll = radio.PLLBlock(1e3, 18e3, 21e3, 3)
 
--- PLL with 1 KHz loop bandwidth, 18 KHz - 21 KHz capture range, 1/16 multiplier
+-- PLL with 1 kHz loop bandwidth, 18 kHz - 21 kHz capture range, 1/16 multiplier
 local pll = radio.PLLBlock(1e3, 18e3, 21e3, 1/16)
 ```
 <div style="margin-bottom:-10px;" align="right"><a href="#table-of-contents">^</a></div>
@@ -2422,7 +2422,7 @@ $$ y[n] = \text{SSBModulate}(x[n], \text{sideband}, \text{bandwidth}) $$
 ###### Example
 
 ``` lua
--- SSB LSB modulator with 3 KHz bandwidth
+-- SSB LSB modulator with 3 kHz bandwidth
 local mod = radio.SSBModulator("lsb", 3e3)
 ```
 <div style="margin-bottom:-10px;" align="right"><a href="#table-of-contents">^</a></div>
@@ -2477,7 +2477,7 @@ $$ y[n] = \text{AMDemodulate}(x[n], \text{bandwidth}) $$
 ###### Example
 
 ``` lua
--- AM demodulator with 5 KHz bandwidth
+-- AM demodulator with 5 kHz bandwidth
 local demod = radio.AMEnvelopeDemodulator(5e3)
 ```
 <div style="margin-bottom:-10px;" align="right"><a href="#table-of-contents">^</a></div>
@@ -2505,7 +2505,7 @@ $$ y[n] = \text{AMDemodulate}(x[n], \text{IF}, \text{bandwidth}) $$
 ###### Example
 
 ``` lua
--- AM demodulator with 100 KHz IF, 5 KHz bandwidth
+-- AM demodulator with 100 kHz IF, 5 kHz bandwidth
 local demod = radio.AMSynchronousDemodulator(100e3, 5e3)
 ```
 <div style="margin-bottom:-10px;" align="right"><a href="#table-of-contents">^</a></div>
@@ -2534,7 +2534,7 @@ bandwidth with a cutoff frequency calculated by Carson's rule.
 ###### Example
 
 ``` lua
--- NBFM demodulator with 5KHz deviation and 4KHz bandwidth
+-- NBFM demodulator with 5 kHz deviation and 4 kHz bandwidth
 local demod = radio.NBFMDemodulator(5e3, 4e3)
 ```
 <div style="margin-bottom:-10px;" align="right"><a href="#table-of-contents">^</a></div>
@@ -2561,7 +2561,7 @@ $$ y[n] = \text{SSBDemodulate}(x[n], \text{sideband}, \text{bandwidth}) $$
 ###### Example
 
 ``` lua
--- SSB LSB demodulator with 3 KHz bandwidth
+-- SSB LSB demodulator with 3 kHz bandwidth
 local demod = radio.SSBDemodulator("lsb", 3e3)
 ```
 <div style="margin-bottom:-10px;" align="right"><a href="#table-of-contents">^</a></div>
@@ -2569,8 +2569,8 @@ local demod = radio.SSBDemodulator("lsb", 3e3)
 
 #### WBFMMonoDemodulator
 
-Demodulate a baseband, wideband FM modulated complex-valued signal into the
-real-valued mono channel (L+R) signal.
+Demodulate a baseband, broadcast radio wideband FM modulated complex-valued
+signal into the real-valued mono channel (L+R) signal.
 
 $$ y[n] = \text{WBFMMonoDemodulate}(x[n], \tau) $$
 
@@ -2594,8 +2594,8 @@ local demod = radio.WBFMMonoDemodulator()
 
 #### WBFMStereoDemodulator
 
-Demodulate a baseband, wideband FM modulated complex-valued signal into the
-real-valued stereo channel (L and R) signals.
+Demodulate a baseband, broadcast radio wideband FM modulated complex-valued
+signal into the real-valued stereo channel (L and R) signals.
 
 $$ y_{left}[n], y_{right}[n] = \text{WBFMStereoDemodulate}(x[n], \tau) $$
 
@@ -2912,7 +2912,7 @@ top:connect(src, receiver, snk)
 
 #### POCSAGReceiver
 
-Demodulate and decode POCSAG messages from a baseband, 4.5 KHz shift FSK
+Demodulate and decode POCSAG messages from a baseband, 4.5 kHz shift FSK
 modulated complex-valued signal.
 
 #### `radio.POCSAGReceiver()`
