docs: improve wording in getting started guide

--- a/docs/2.getting-started.md
+++ b/docs/2.getting-started.md
@@ -6,18 +6,17 @@
 <img src="figures/flowgraph_rtlsdr_wbfm_mono.png" />
 </p>
 
-LuaRadio is a framework for defining and running signal processing flow graphs.
-A flow graph is a directed graph of blocks that processes samples. Samples in a
-flow graph originate at source blocks, get manipulated through intermediate
+LuaRadio is a framework for building signal processing flow graphs.  A flow
+graph is a directed graph of blocks that processes data samples. Samples in a
+flow graph originate at source blocks, are manipulated through intermediate
 processing blocks, and terminate at sink blocks.  This paradigm — also called
-dataflow programming — is useful for software defined radio, because it allows
-you to build programs that model the architectures of conventional hardware
-radios.
+dataflow programming — is useful for software-defined radio, because it allows
+you to model the architectures of conventional hardware radios.
 
-In software defined radio flow graphs, source and sink blocks tend to implement
-some kind of I/O, like reading samples from an SDR dongle, or writing samples
-to an IQ file, while processing blocks tend to be computational, like filters
-and multipliers.
+In a software-defined radio flow graph, source and sink blocks tend to
+implement some kind of I/O, like reading samples from an SDR dongle, or writing
+samples to an IQ file, while processing blocks tend to be computational, like
+filters and multipliers.
 
 ### Type Signatures
 
@@ -26,11 +25,11 @@ and multipliers.
 </p>
 
 LuaRadio blocks have data types associated with their input and output ports.
-For example, a multiplier block may support two complex-valued inputs named
-`in1` and `in2`, and a complex-valued output named `out`.  It may also support
-two real-valued inputs named `in1` and `in2`, and a real-valued output named
-`out`.  Each collection of data types associated with the input and output
-ports is called a type signature.
+For example, a multiplier block may support complex-valued inputs named `in1`
+and `in2`, and a complex-valued output named `out`.  It may also support
+real-valued inputs named `in1` and `in2`, and a real-valued output named `out`.
+Each collection of data types associated with the input and output ports is
+called a type signature.
 
 <p align="center">
 <img src="figures/figure_type_signatures_example.png" />
@@ -53,9 +52,9 @@ inherit — and possibly modify — the sample rate of their upstream block.  Fo
 example, interpolator and decimator blocks will multiply and divide the sample
 rate, respectively.
 
-LuaRadio propagates sample rates between blocks for you. Blocks can access
-their runtime sample rate to perform sample rate dependent initialization and
-computations.
+LuaRadio propagates sample rates between blocks for you, and ensures that
+sample rates match across multiple inputs. Blocks can access their runtime
+sample rate to perform sample rate dependent initialization and computations.
 
 ### Flow Graph Termination
 
@@ -64,11 +63,11 @@ computations.
 </p>
 
 While some flow graphs may describe a continuously running system (e.g. a
-Wideband FM receiver), LuaRadio flow graphs do not necessarily run forever. If
-a source terminates, the framework will gracefully collapse the flow graph as
-the final samples propagate their way though the graph. This allows you to
-build utilities with LuaRadio that process files to completion, or to use it as
-an engine for processing finite length data.
+Wideband FM broadcast radio receiver), LuaRadio flow graphs do not necessarily
+run forever. If a source terminates, the framework will gracefully collapse the
+flow graph as the final samples propagate their way though the graph. This
+allows you to build utilities with LuaRadio that process files to completion,
+or to use it as an engine for processing finite length data.
 
 ## Example
 
@@ -84,8 +83,8 @@ blocks, and running a flow graph.
 local radio = require('radio')
 
 -- Blocks
-local source1 = radio.SignalSource('cosine', 125e3, 1e6) -- 125 KHz cosine source, sampled at 1 MHz
-local source2 = radio.SignalSource('cosine', 75e3, 1e6)  -- 75 KHz cosine source, sampled at 1 MHz
+local source1 = radio.SignalSource('cosine', 125e3, 1e6) -- 125 kHz cosine source, sampled at 1 MHz
+local source2 = radio.SignalSource('cosine', 75e3, 1e6)  -- 75 kHz cosine source, sampled at 1 MHz
 local mixer = radio.MultiplyBlock()                      -- Multiply block
 local throttle = radio.ThrottleBlock()                   -- Throttle block
 local sink = radio.GnuplotSpectrumSink()                 -- Spectrum plotting sink
@@ -106,12 +105,13 @@ Run the flow graph with the `luaradio` runner:
 $ ./luaradio test.lua
 ```
 
-The flow graph can be terminated with Ctrl-C / `SIGINT`.
+The flow graph can be terminated with Ctrl-C or `SIGINT`.
 
-This flow graph multiples two tones at 125 KHz and 75 KHz to create the sum and
-difference frequency tones at 200 KHz and 50 KHz, respectively.
+This flow graph [mixes](https://en.wikipedia.org/wiki/Frequency_mixer) two
+tones at 125 kHz and 75 kHz to create the sum and difference frequency tones at
+200 kHz and 50 kHz, respectively.
 
-The two sources produce real-valued sinusoids at 125 KHz and 75 KHz and are
+The two sources produce real-valued sinusoids at 125 kHz and 75 kHz and are
 connected to the inputs of the multiplier. The output of the multiplier is
 connected to a throttle block, which artificially throttles processing to limit
 CPU usage. The throttle block is connected to a gnuplot spectrum sink, which
@@ -124,26 +124,45 @@ produces the plot below:
 
 ### Explanation
 
+``` lua
+local radio = require('radio')
+```
+
 The first line of the example imports the `radio` package under the local
 variable `radio`. This package exposes all LuaRadio blocks, as well the
 facilities to create custom blocks and types.
 
-The lines in the blocks section instantiate each block of the flow graph. Each
-block's constructor is documented in the [LuaRadio Reference
-Manual](0.reference-manual.md). Note that sample rate parameters are only
-required for the source blocks — all other blocks inherit their sample rate
-through the connections in the flow graph.
+``` lua
+-- Blocks
+local source1 = radio.SignalSource('cosine', 125e3, 1e6) -- 125 kHz cosine source, sampled at 1 MHz
+local source2 = radio.SignalSource('cosine', 75e3, 1e6)  -- 75 kHz cosine source, sampled at 1 MHz
+local mixer = radio.MultiplyBlock()                      -- Multiply block
+local throttle = radio.ThrottleBlock()                   -- Throttle block
+local sink = radio.GnuplotSpectrumSink()                 -- Spectrum plotting sink
+local top = radio.CompositeBlock()                       -- Top-level block to contain the flow graph
+```
+
+The blocks section lines instantiate each block of the flow graph. Note that
+sample rate parameters are only required for the source blocks; all other
+blocks inherit their sample rate through the connections in the flow graph.
 
 The last line of the blocks section instantiates a special kind of block,
 called the [`CompositeBlock`](0.reference-manual.md#compositeblock). A
 composite block is a composition of blocks, created for one of two purposes:
-either for a top-level block, a composition of blocks forming a complete flow
-graph that can be run, or for a hierarchical block, a composition of blocks
+either for a top-level block: a composition of blocks forming a complete flow
+graph that can be run, or for a hierarchical block: a composition of blocks
 abstracted into one block. In this example, we create a `CompositeBlock` to
 serve as a top-level block that contains a complete flow graph.
 
-The lines in the connections section specify the connections between blocks,
-inside the top-level block, which form the complete flow graph.
+``` lua
+-- Connections
+top:connect(source1, 'out', mixer, 'in1')
+top:connect(source2, 'out', mixer, 'in2')
+top:connect(mixer, throttle, sink)
+```
+
+The connections section lines specify the connections between blocks, inside
+the top-level block, which form the complete flow graph.
 
 The first two connections demonstrate the explicit connection syntax. For
 instance, `top:connect(source1, 'out', mixer, 'in1')`, where `source1`'s output
@@ -158,8 +177,10 @@ and connect the first output to the first input of each adjacent block. This
 syntax is convenient for connecting chains of blocks that only have one input
 and output, which is most blocks.
 
-The input and output ports for each block, and their supported data types, are
-documented in the [LuaRadio Reference Manual](0.reference-manual.md).
+``` lua
+-- Run it
+top:run()
+```
 
 The last line of the example runs the flow graph. This line will block until
 the flow graph terminates, either naturally by an exiting source, or forcibly
@@ -173,7 +194,7 @@ Building flow graphs with LuaRadio is a matter of choosing the right blocks and
 connecting them.  The [LuaRadio Reference Manual](0.reference-manual.md)
 documents all packaged blocks, including a description of their operation,
 their arguments, and their input/output port names and data types. Creating
-custom blocks is easy, too, and covered in the next guide, [Creating
+blocks is easy, too, and covered in the next guide, [Creating
 Blocks](3.creating-blocks.md).
 
 LuaRadio blocks may support multiple type signatures for their input and output
@@ -187,40 +208,42 @@ LuaRadio comes with four basic data types:
 
 * [`ComplexFloat32`](0.reference-manual.md#complexfloat32), compatible with the
   `float complex` C type
-* [`Float32`](0.reference-manual.md#float32), the `float` C type
-* [`Byte`](0.reference-manual.md#byte), the `uint8_t` C type
-* [`Bit`](0.reference-manual.md#bit), a single-bit value stored in the
-  `uint8_t` C type
+* [`Float32`](0.reference-manual.md#float32), compatible with the `float` C
+  type
+* [`Byte`](0.reference-manual.md#byte), compatible with the `uint8_t` C type
+* [`Bit`](0.reference-manual.md#bit), compatible with the `uint8_t` C type,
+  stored in the least significant bit
 
 Under the hood, the framework moves vectors of contiguous samples between
 blocks for processing. Since these vectors are simply dynamic arrays of C
-types, LuaRadio blocks can leverage the [LuaJIT foreign function interface
-(FFI)](http://luajit.org/ext_ffi.html) to call external libraries to process
-them.
+types, LuaRadio blocks can leverage the [LuaJIT foreign function
+interface](http://luajit.org/ext_ffi.html) (FFI) to call external libraries to
+process them.
 
 In addition, users may create custom data types based on C structures or Lua
 objects that are serializable between processing blocks. See the [Custom
-Types](3.creating-blocks.md#custom-types) section in the next guide.
+Types](3.creating-blocks.md#custom-types) section of the next guide.
 
 ## Caveats
 
 The LuaRadio architecture has a few important caveats.
 
-##### Flow graphs must be acyclic.
+###### Flow graphs must be acyclic.
 
 Feedback loops cannot be implemented by blocks connected in a cycle.  Instead,
 operations that require feedback loops must be implemented entirely within a
-block (for example, the [PLLBlock](0.reference-manual.md#pllblock)).
+block (for example, the [`PLLBlock`](0.reference-manual.md#pllblock)).
 
-##### Blocks cannot be manipulated after a flow graph is running.
+###### Blocks cannot be manipulated after a flow graph is running.
 
 Blocks must get all of the settings they need before they are run in a flow
-graph. This means that building applications that require runtime modifications
+graph. This means that building flow graphs that require runtime modifications
 to blocks — for example, programmatically retuning the frequency of an SDR
-source to build a spectrum analyzer —  is not possible without implementing
-out-of-band messaging to the block.
+source to build a spectrum analyzer —  is not possible without creating a
+custom block that accepts the runtime modifications via out-of-band messaging.
 
 ## Next Steps...
 
-See the next guide, [Creating Blocks](3.creating-blocks.md), for details on
-creating your own LuaRadio blocks.
+The next guide, [Creating Blocks](3.creating-blocks.md), describes the basic
+concepts behind blocks, data types, and vectors, and demonstrates how to create
+blocks and data types.
